Add & Test EVM precompile sha3fips

--- a/runtime/precompiles/Cargo.toml
+++ b/runtime/precompiles/Cargo.toml
@@ -17,6 +17,7 @@ pallet-evm = { default-features = false, git = 'https://github.com/polkafoundry/
 pallet-evm-precompile-dispatch = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
 pallet-evm-precompile-modexp = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
 pallet-evm-precompile-simple = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
+pallet-evm-precompile-sha3fips = { default-features = false, git = 'https://github.com/polkafoundry/frontier.git', branch = 'halongbay' }
 
 [features]
 default = [ "std" ]
@@ -26,4 +27,5 @@ std = [
     'pallet-evm-precompile-dispatch/std',
     'pallet-evm-precompile-modexp/std',
     'pallet-evm-precompile-simple/std',
+    'pallet-evm-precompile-sha3fips/std',
 ]
