--- a/pallets/polkafoundry-staking/Cargo.toml
+++ b/pallets/polkafoundry-staking/Cargo.toml
@@ -26,11 +26,13 @@ sp-arithmetic = { default-features = false, git = 'https://github.com/paritytech
 sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
 frame-election-provider-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
+pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
+pallet-session = { git = "https://github.com/paritytech/substrate", features = ["historical"], branch = "master", default-features = false }
 
+[dev-dependencies]
 pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
 pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
-pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
-pallet-session = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
+pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
 
 [features]
 default = ['std']
@@ -44,6 +46,7 @@ std = [
     'pallet-utility/std',
     'pallet-authorship/std',
     'pallet-session/std',
+    'pallet-timestamp/std',
     'log/std',
     'sp-core/std',
     'sp-io/std',
